add search form

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservia</title>
+    <script src="https://kit.fontawesome.com/1a86e8d76b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <!-- NAVBAR -->
     <header>
       <nav>
         <img id="logo" src="./reservia_logo.svg" alt="reservia logo">
@@ -20,6 +22,22 @@
         <a class="signup" href="">S'inscrire</a>
       </nav>
     </header>
+
+    <main class="wrapper">
+      <!-- HEADINGS -->
+      <h1>Trouvez votre hébergement pour des vacances de rêve
+      </h1>
+      <p>En plein centre de ville ou en pleine nature
+      </p>
+
+      <!-- SEARCH FORM -->
+      <div class="search-form">
+        <i class="fas fa-map-marker-alt"></i>
+        <input type="text" placeholder="Marseille, France">
+        <button>Rechercher</button>
+      </div>
+    </main>
+
   </body>
 
 </html>
