--- a/index.html
+++ b/index.html
@@ -34,8 +34,195 @@
       <div class="search-form">
         <i class="fas fa-map-marker-alt"></i>
         <input type="text" placeholder="Marseille, France">
-        <button>Rechercher</button>
+        <button>
+          <span class="search-text">Rechercher</span>
+          <i class="fas fa-search"></i>
+        </button>
       </div>
+
+      <!-- FILTERS -->
+      <div class="filter-list">
+        <h1>Filters</h1>
+        <div class="filter">
+          <i class="fas fa-money-bill-wave"></i>
+          <span>Economique</span>
+        </div>
+        <div class="filter">
+          <i class="fas fa-child"></i>
+          <span>Familial</span>
+        </div>
+        <div class="filter">
+          <i class="fas fa-heart"></i>
+          <span>Romantique</span>
+        </div>
+        <div class="filter">
+          <i class="fas fa-dog"></i>
+          <span>Animaux autorisés</span>
+        </div>
+      </div>
+
+      <!-- RESULTS MESSAGE -->
+      <div class="results-message">
+        <i class="fas fa-info"></i>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+      </div>
+
+      <!-- APARMTENTS LIST -->
+      <div class="apartments-list">
+
+        <div class="city">
+          <h3>Hébergement à Marseille</h3>
+          <div class="city-apartments-list">
+            <div class="apartment-card">
+              <div class="apartment-card-image">
+                <img src="https://reservia.mathisbarre.com/img/hosting/small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  alt="canebiere">
+              </div>
+              <h3>Auberge de la Canebière</h3>
+              <p>Nuit à partir de <strong>25€</strong></p>
+              <p class="stars">
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star grey"></i>
+              </p>
+            </div>
+            <div class="apartment-card">
+              <div class="apartment-card-image">
+                <img src="https://reservia.mathisbarre.com/img/hosting/small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                  alt="canebiere">
+              </div>
+              <h3>Hôtel du port</h3>
+              <p>Nuit à partir de <strong>52€</strong></p>
+              <p class="stars">
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star grey"></i>
+              </p>
+            </div>
+            <div class="apartment-card">
+              <div class="apartment-card-image">
+                <img src="https://reservia.mathisbarre.com/img/hosting/small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                  alt="canebiere">
+              </div>
+              <h3>Hôtel Les Mouettes</h3>
+              <p>Nuit à partir de <strong>76€</strong></p>
+              <p class="stars">
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star grey"></i>
+              </p>
+            </div>
+            <div class="apartment-card">
+              <div class="apartment-card-image">
+                <img src="https://reservia.mathisbarre.com/img/hosting/small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                  alt="canebiere">
+              </div>
+              <h3>Auberge de la mer</h3>
+              <p>Nuit à partir de <strong>46€</strong></p>
+              <p class="stars">
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star grey"></i>
+                <i class="fas fa-star grey"></i>
+              </p>
+            </div>
+            <div class="apartment-card">
+              <div class="apartment-card-image">
+                <img src="https://reservia.mathisbarre.com/img/hosting/small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                  alt="canebiere">
+              </div>
+              <h3>Auberge Le Panier</h3>
+              <p>Nuit à partir de <strong>23€</strong></p>
+              <p class="stars">
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star grey"></i>
+              </p>
+            </div>
+            <div class="apartment-card">
+              <div class="apartment-card-image">
+                <img src="https://reservia.mathisbarre.com/img/hosting/small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                  alt="canebiere">
+              </div>
+              <h3>Hôtel Chez Amina</h3>
+              <p>Nuit à partir de <strong>96€</strong></p>
+              <p class="stars">
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+                <i class="fas fa-star blue"></i>
+              </p>
+            </div>
+
+          </div>
+          <a href="">Afficher plus</a>
+        </div>
+        <div class="popular">
+          <h3>Les plus populaires
+            <i class="fas fa-chart-line"></i>
+          </h3>
+          <div class="popular-flex">
+            <div class="apartment-card popular-card">
+              <img src="https://reservia.mathisbarre.com/img/hosting/small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                alt="canebiere">
+              <div class="popular-description">
+                <h3>Hôtel Le soleil du matin</h3>
+                <p>Nuit à partir de <strong>128€</strong></p>
+                <p class="stars">
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                </p>
+              </div>
+            </div>
+            <div class="apartment-card popular-card">
+              <img src="https://reservia.mathisbarre.com/img/hosting/small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                alt="canebiere">
+              <div class="popular-description">
+                <h3>Hôtel Le soleil du matin</h3>
+                <p>Nuit à partir de <strong>128€</strong></p>
+                <p class="stars">
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                </p>
+              </div>
+            </div>
+            <div class="apartment-card popular-card">
+              <img src="https://reservia.mathisbarre.com/img/hosting/small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                alt="canebiere">
+              <div class="popular-description">
+                <h3>Hôtel Le soleil du matin</h3>
+                <p>Nuit à partir de <strong>128€</strong></p>
+                <p class="stars">
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star blue"></i>
+                  <i class="fas fa-star grey"></i>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
     </main>
 
   </body>
