activities et footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
 
-    <main class="wrapper">
+    <main>
       <!-- HEADINGS -->
       <h1>Trouvez votre hébergement pour des vacances de rêve
       </h1>
@@ -221,10 +221,47 @@
         </div>
       </div>
 
-
-
+      <h3>Activités à Marseille</h3>
+      <div class="activities-list">
+        <div class="big big1">
+          <h3>Vieux Port</h3>
+        </div>
+        <div class="medium1">
+          <h3>Fort de Pomègues</h3>
+        </div>
+        <div class="small1">
+          <h3>Île du Frioul</h3>
+        </div>
+        <div class="big big2">
+          <h3>Parc National des Calanques</h3>
+        </div>
+        <div class="small2">
+          <h3>Notre-Dame de la Garde</h3>
+        </div>
+        <div class="medium2">
+          <h3>Parc Longchamp</h3>
+        </div>
+      </div>
     </main>
 
+    <footer>
+      <div>
+        <h4>A propos</h4>
+        <p>Fonctionnement du site</p>
+        <p>Conditions générales de vente</p>
+        <p>Données et confidentialités</p>
+      </div>
+      <div>
+        <h4>Nos hébergements</h4>
+        <p>Charte qualité</p>
+        <p>Soumettre votre hotel</p>
+      </div>
+      <div>
+        <h4>Assistance</h4>
+        <p>Centre d'aide</p>
+        <p>Nous contacter</p>
+      </div>
+    </footer>
   </body>
 
 </html>
